<resources>
    <string name="app_name">FindPet_Android</string>

    <!-- placeholder(hint) -->
    <string name="placeholderEmail">아이디(이메일)를 입력해주세요</string>
    <string name="placeholderPassword">비밀번호를 입력해주세요</string>
    <string name="placeholderWriteCheckPassword">비밀번호를 다시 입력해주세요</string>
    <string name="placeholderWriteName">이름을 입력해주세요</string>
    <string name="placeholderWriteNumber">휴대폰번호를 입력해주세요</string>

    <!-- Button -->
    <string name="signInButton">로그인</string>
    <string name="signUpButton">회원가입</string>
</resources>