<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:actionBarNavMode="standard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.findpet_android.TeamProject.fragment.SignInFragment">

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:autofillHints="emailAddress"
        android:hint="@string/placeholderEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:hint="@string/placeholderPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:text="@string/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:text="@string/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageButton
        android:id="@+id/kakaoSignIn"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="412dp"

        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        android:src="@drawable/btn_kakao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/naverSignIn"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="477dp"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        android:src="@drawable/btn_naver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/googleSignIn"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_marginTop="542dp"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        android:src="@drawable/btn_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>